test/valid/FieldIdEqPrimitiveInteger/FieldIdEqPrimitiveInteger.plume
/**
 * @author Diogo Marques, 30100
 */
class FieldIdEqPrimitiveInteger extends Object is
	field Integer : Integer
	
	method override toString : () -> String is
		Integer.toString()
	